# rlrl

./: .gitignore  README.md  analyze_sweep.py  pyproject.toml  settings.txt
rlrl/: consts.py  env.py  main.py  metrics.py  sweep.py
rlrl/config/: aerial.py  ball.py
rlrl/config/sweeps/: hyperparameters.py
rlrl/rewards/: aerial.py  boost.py  events.py  existence.py  goal.py  logger.py
