[project]
name = "rlrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "rlgym-sac",
    "rlgym-sim",
    "rocketsim>=2.1.1.post4",
    "torch>=2.9.1",
]

[tool.uv.sources]
rlgym-sim = { git = "https://github.com/AechPro/rocket-league-gym-sim", rev = "a1240530239d6b7671147b4f97e9b5e130d0acce" }
torch = { index = "pytorch" }
rlgym-sac = { git = "https://github.com/USA-RedDragon/rlgym-sac", rev = "fc3f6cc06d6a9025e5138c783c81c00227d740ff" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.packages.find]
where = ["rlrl"]
